k3s/apps/gatus/overlays/devoups/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
spec:
  ingressClassName: public
  rules:
    - host: devou.ps
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devoups-gatus
                port:
                  name: http
  tls:
    - hosts:
        - devou.ps
      secretName: devoups-gatus-tls
